--- a/route.html
+++ b/route.html
@@ -129,7 +129,7 @@
 
                                 <!-- menu toggler -->
                                 <div class="hamburger-menu">
-                                    <div class="menu-btn__burger"></div>
+                                    <div class="menu-btn__burger"><i>menu</i></div>
                                 </div>
                             </div>
                         </div>
@@ -316,16 +316,16 @@
                                                 <div class="address-area collapse list-unstyled" id="address">
                                                     <ul class="address-ul">
                                                         <li><img src="assets/img/icon/f-mail.svg" alt="" class="address-icon">
-                                                            <p>info@hsvautos.nl</p>
+                                                            <a href="">info@hsvautos.nl</a>
                                                         </li>
                                                         <li><img src="assets/img/icon/f-phone.svg" alt="" class="address-icon">
-                                                            <p>+31 (0)578 61 77 88</p>
+                                                            <a href="">+31 (0)578 61 77 88</a>
                                                         </li>
                                                         <li><img src="assets/img/icon/f-whats-app.svg" alt="" class="address-icon">
-                                                            <p>+31 (0) 622 37 69 69</p>
+                                                            <a href="">+31 (0) 622 37 69 69</a>
                                                         </li>
                                                         <li><img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                            <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                                            <a href="">Riezebosweg 4, 8171 MG Vaassen, The Netherlands</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -409,31 +409,44 @@
                             </div>
                         </div>
                     </div>
-                    <div class="last-footer">
-                        <div class="copy-sec">
-                            <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
-                            <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
-                        </div>
-                        <div class="right-area">
-                            <div class="footer-social">
-                                <div class="barnd-logo">
-                                    <img src="assets/img/rwd.png" class="barnd-img" alt="">
-                                    <img src="assets/img/nap.png" class="barnd-img" alt="">
+                    <div class="footer-toggle-btn copy-toggle">
+                        <div class="shfooter">
+                            <div class="d-md-none colleps-border title" data-bs-target="#copyright" data-bs-toggle="collapse">
+                                <div class="mt-3 colleps-ind">
+                                    <h2 class="colleps-button">Copyright</h2>
+                                    <div class="float-right navbar-toggler">
+                                        <i class="icofont-rounded-down"></i>
+                                        <i class="icofont-rounded-up"></i>
+                                    </div>
                                 </div>
-
-                                <div class="social">
-                                    <ul>
-                                        <li>
-                                            <a href="" class="social-link"><img src="assets/img/icon/facebook.svg" alt=""></a>
-                                        </li>
-                                        <li>
-                                            <a href="" class="social-link"><img src="assets/img/icon/insta.svg" alt=""></a>
-                                        </li>
-                                    </ul>
+                            </div>
+                            <div class="last-footer collapse list-unstyled" id="copyright">
+                                <div class="copy-sec">
+                                    <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
+                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
                                 </div>
+                                <div class="right-area">
+                                    <div class="footer-social">
+                                        <div class="barnd-logo">
+                                            <img src="assets/img/rwd.png" class="barnd-img" alt="">
+                                            <img src="assets/img/nap.png" class="barnd-img" alt="">
+                                        </div>
 
-                                <div class="backto-top">
-                                    <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+                                        <div class="social">
+                                            <ul>
+                                                <li>
+                                                    <a href="" class="social-link"><img src="assets/img/icon/facebook.svg" alt=""></a>
+                                                </li>
+                                                <li>
+                                                    <a href="" class="social-link"><img src="assets/img/icon/insta.svg" alt=""></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+
+                                        <div class="backto-top">
+                                            <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
