--- a/purchase.html
+++ b/purchase.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- =================responsive============ -->
     <link rel="stylesheet" href="assets/css/responsive.css">
-
+    <link href="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -129,7 +129,7 @@
 
                                 <!-- menu toggler -->
                                 <div class="hamburger-menu">
-                                    <div class="menu-btn__burger"></div>
+                                    <div class="menu-btn__burger"><i>menu</i></div>
                                 </div>
                             </div>
                         </div>
@@ -164,8 +164,7 @@
                     <div class="col-md-5">
                         <div class="page-banner-text">
                             <p>IN- EN VERKOOP VAN AUTO’S</p>
-                            <h1>UW OCCASIONDEALER UIT VAASSEN.</h1>
-
+                            <h1>AUTO INKOOP</h1>
                         </div>
                     </div>
                 </div>
@@ -219,9 +218,12 @@
                                         <input type="text" class="form-control" placeholder="MERK *">
                                     </div>
                                 </div>
+
+
                                 <div class="col-md-4 col-sm-6 mb-4">
-                                    <div class="form-group">
-                                        <input type="date" class="form-control" placeholder="MERK *">
+                                    <div class="form-group  icon" id="example2">
+                                        <input type="text" class="form-control date-calender" placeholder="APK VERLOOPDATUM">
+                                        <img src="assets/img/icon/calendar.svg" alt="" class="calendar-img">
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-sm-6 mb-4">
@@ -525,16 +527,16 @@
                                                 <div class="address-area collapse list-unstyled" id="address">
                                                     <ul class="address-ul">
                                                         <li><img src="assets/img/icon/f-mail.svg" alt="" class="address-icon">
-                                                            <p>info@hsvautos.nl</p>
+                                                            <a href="">info@hsvautos.nl</a>
                                                         </li>
                                                         <li><img src="assets/img/icon/f-phone.svg" alt="" class="address-icon">
-                                                            <p>+31 (0)578 61 77 88</p>
+                                                            <a href="">+31 (0)578 61 77 88</a>
                                                         </li>
                                                         <li><img src="assets/img/icon/f-whats-app.svg" alt="" class="address-icon">
-                                                            <p>+31 (0) 622 37 69 69</p>
+                                                            <a href="">+31 (0) 622 37 69 69</a>
                                                         </li>
                                                         <li><img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                            <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                                            <a href="">Riezebosweg 4, 8171 MG Vaassen, The Netherlands</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -618,31 +620,44 @@
                             </div>
                         </div>
                     </div>
-                    <div class="last-footer">
-                        <div class="copy-sec">
-                            <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
-                            <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
-                        </div>
-                        <div class="right-area">
-                            <div class="footer-social">
-                                <div class="barnd-logo">
-                                    <img src="assets/img/rwd.png" class="barnd-img" alt="">
-                                    <img src="assets/img/nap.png" class="barnd-img" alt="">
+                    <div class="footer-toggle-btn copy-toggle">
+                        <div class="shfooter">
+                            <div class="d-md-none colleps-border title" data-bs-target="#copyright" data-bs-toggle="collapse">
+                                <div class="mt-3 colleps-ind">
+                                    <h2 class="colleps-button">Copyright</h2>
+                                    <div class="float-right navbar-toggler">
+                                        <i class="icofont-rounded-down"></i>
+                                        <i class="icofont-rounded-up"></i>
+                                    </div>
                                 </div>
-
-                                <div class="social">
-                                    <ul>
-                                        <li>
-                                            <a href="" class="social-link"><img src="assets/img/icon/facebook.svg" alt=""></a>
-                                        </li>
-                                        <li>
-                                            <a href="" class="social-link"><img src="assets/img/icon/insta.svg" alt=""></a>
-                                        </li>
-                                    </ul>
+                            </div>
+                            <div class="last-footer collapse list-unstyled" id="copyright">
+                                <div class="copy-sec">
+                                    <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
+                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
                                 </div>
+                                <div class="right-area">
+                                    <div class="footer-social">
+                                        <div class="barnd-logo">
+                                            <img src="assets/img/rwd.png" class="barnd-img" alt="">
+                                            <img src="assets/img/nap.png" class="barnd-img" alt="">
+                                        </div>
 
-                                <div class="backto-top">
-                                    <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+                                        <div class="social">
+                                            <ul>
+                                                <li>
+                                                    <a href="" class="social-link"><img src="assets/img/icon/facebook.svg" alt=""></a>
+                                                </li>
+                                                <li>
+                                                    <a href="" class="social-link"><img src="assets/img/icon/insta.svg" alt=""></a>
+                                                </li>
+                                            </ul>
+                                        </div>
+
+                                        <div class="backto-top">
+                                            <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -670,10 +685,18 @@
     <!-- ==============map=============== -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+
+    <script src="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.js"></script>
     <!-- ==================map init========== -->
     <script src="assets/js/map.js"></script>
     <!-- =============custom js========= -->
     <script src="assets/js/app.js"></script>
+
+    <script>
+        $('#example2').calendar({
+            type: 'date'
+        });
+    </script>
 
 </body>
 
